--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,6 @@
 {
     "name": "bangpound/castle-search",
     "license": "MIT",
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "http://bangpound.github.io/satis-repository"
-        }
-    ],
     "require": {
         "php": ">=5.3.3",
         "silex/silex": "~1.1",
@@ -19,10 +13,7 @@
         "symfony/security": "~2.3",
         "symfony/twig-bridge": "~2.3",
         "symfony/validator": "~2.3",
-        "yohang/dependency-tools": "1.0.*",
-        "bangpound/wordpress-silex-extension": "dev-master",
-        "bangpound/php-cms-bootstrap-silex-extension": "dev-master",
-        "bangpound/guzzle-proxy-silex-extension": "dev-master"
+        "yohang/dependency-tools": "1.0.*"
     },
     "require-dev": {
         "silex/web-profiler": "~1.0",
